--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,21 @@
         <version>4.1.0</version>
     </dependency>
       <dependency>
+          <groupId>com.github.rinde</groupId>
+          <artifactId>rinsim-ui</artifactId>
+          <version>4.1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.auto.value</groupId>
+          <artifactId>auto-value</artifactId>
+          <version>1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.auto.service</groupId>
+          <artifactId>auto-service</artifactId>
+          <version>1.0-rc2</version>
+      </dependency>
+      <dependency>
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-stdlib</artifactId>
           <version>${kotlin.version}</version>
